--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,4 +15,4 @@ jobs:
         -u "tbrand-aa:${{ secrets.PA_TOKEN }}" \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
-        --data '{"event_type": "project-build_${{ github.repository }}", "client_payload": { "environment": "acceptance" }}'
+        --data '{"event_type": "project-build_${{ format(github.repository, \'/\', \'_\') }}", "client_payload": { "environment": "acceptance" }}'
