--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,15 @@ jobs:
 
     steps:
     - run: |
+        repo="${github_repo//\//\\/}"
+        echo $repo
+        echo "::set-env name=repo::$repo"
+      env:
+        github_repo: ${{ github.repository }}
+    - run: |
         curl \
         -XPOST \
         -u "tbrand-aa:${{ secrets.PA_TOKEN }}" \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
-        --data '{"event_type": "project-build_${{ format(github.repository, \'/\', \'_\') }}", "client_payload": { "environment": "acceptance" }}'
+        --data '{"event_type": "project-build_$repo", "client_payload": { "environment": "acceptance" }}'
