--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,3 +22,5 @@ jobs:
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
         --data '{"event_type": "project-build_$repo", "client_payload": { "environment": "acceptance" }}'
+      env:
+        repo: ${{ github.env.repo }}
