--- a/.github/workflows/rotate-auth.yml
+++ b/.github/workflows/rotate-auth.yml
@@ -17,7 +17,7 @@ jobs:
     - run: |
         curl \
         -XPOST \
-        -u "tbrand-aa:${{ secrets.PA_TOKEN }}" \
+        -H "Authorization: token ${{ secrets.PA_TOKEN }}" \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
         --data '{"event_type": "mic-rotate-auth_${{ env.repo }}", "client_payload": { "environment": "acceptance", "cluster": "pipeline-tester " }}'
