--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
         -u "tbrand-aa:${{ secrets.PA_TOKEN }}" \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
-        --data '{"event_type": "project-build_${{ env.repo }}", "client_payload": { "environment": "acceptance" }}'
+        --data '{"event_type": "project-build_${{ env.repo }}", "client_payload": { "environment": "acceptance", "repository_name": "${{ github.repository }}", "repository_sha": "${{ github.sha }}"  }}'
