--- a/.github/workflows/rotate-auth.yml
+++ b/.github/workflows/rotate-auth.yml
@@ -20,4 +20,4 @@ jobs:
         -H "Authorization: token ${{ secrets.PA_TOKEN }}" \
         -H "Accept: application/vnd.github.everest-preview+json" \
         -H "Content-Type: application/json" https://api.github.com/repos/tbrand-aa/pipeline-base/dispatches \
-        --data '{"event_type": "mic-rotate-auth_${{ env.repo }}", "client_payload": { "environment": "acceptance", "cluster": "pipeline-tester" }}'
+        --data '{"event_type": "mic-rotate-auth_${{ env.repo }}", "client_payload": { "environment": "acceptance", "repository_name": "${{ github.repository }}", "repository_sha": "${{ github.sha }}"  }}'
