Updated schedule for scheduled workflow

--- a/.github/workflows/rotate-auth.yml
+++ b/.github/workflows/rotate-auth.yml
@@ -1,8 +1,8 @@
 name: Rotate Auth
 
 on:
-  # schedule:
-  #   - cron:  '*/30 * * * *'
+  schedule:
+    - cron:  '* * 1 * *'
 
 jobs:
   call_pipeline:
