--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gh-pipeline-tester",
   "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
