--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       env:
         github_repo: ${{ github.repository }}
     - id: trigger-action
-        uses: ../workflow-actions/build-trigger-action.yml
+        uses: actions/build-trigger-action.yml
         with:
           event-type: 'integration-test_${{ env.repo }}'
           environment: 'acceptance'
