--- a/.github/actions/build-trigger-action.yml
+++ b/.github/actions/build-trigger-action.yml
@@ -22,5 +22,5 @@ runs:
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
-    - run: ${{ github.action_path }}/goodbye.sh
-      shell: bash
+#    - run: ${{ github.action_path }}/goodbye.sh
+#      shell: bash
