--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       env:
         github_repo: ${{ github.repository }}
     - id: trigger-action
-        uses: .github/actions/build-trigger-action.yml
+        uses: ./.github/actions/build-trigger-action
         with:
           event-type: 'integration-test_${{ env.repo }}'
           environment: 'acceptance'
